--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
+spring.cloud.gcp.pubsub.subscriber-executor-threads: 1
 server.connection-timeout: -1
 server:
   port: 8080
   servlet:
     context-path: /
 application:
+  pubsub:
+    topic: ${pub_sub_topic}
+    subscription:
+      upload: ${pub_sub_subscription_name}
   uploadService:
     bucketName: ${bucket_name}
 spring:
@@ -18,7 +23,7 @@ spring:
       minimum-idle: 10
     password: ${db_password}
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://${db_ip_address}:5432/${db_name}?currentSchema=demo
+    url: jdbc:postgresql://${db_ip_address:localhost}:5432/${db_name}?currentSchema=demo
     username: ${db_username}
   jackson:
     date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
